--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <section id="hero" class="parallax">
         <div class="hero-content">
             <h1>Hi, I'm Luan Merolli</h1>
-            <p>Professional [Your Profession] based in [Your Location]</p>
+            <p>Cybersecurity Student based in Philadelphia</p>
             <a href="https://www.linkedin.com/in/luan-merolli-75a4161b7/" target="_blank" class="btn">View LinkedIn</a>
         </div>
     </section>
 
     <section id="about" class="fade-in">
         <h2>About Me</h2>
-        <p>I'm Luan Merolli, a passionate professional in [Your Field]. I love creating solutions that make a difference.</p>
+        <p>I'm Luan Merolli, a LAN/WAN Information Systems Intern at Crown Cork and Seal in Yardley, PA. I love creating solutions that make a difference.</p>
     </section>
 
     <section id="projects" class="fade-in">
