--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="https://www.linkedin.com/in/luan-merolli-75a4161b7/" target="_blank">LinkedIn</a></li>
             </ul>
@@ -23,14 +24,14 @@
     <section id="hero" class="parallax">
         <div class="hero-content">
             <h1>Hi, I'm Luan Merolli</h1>
-            <p>Cybersecurity Student based in Philadelphia</p>
+            <p>Professional [Your Profession] based in [Your Location]</p>
             <a href="https://www.linkedin.com/in/luan-merolli-75a4161b7/" target="_blank" class="btn">View LinkedIn</a>
         </div>
     </section>
 
     <section id="about" class="fade-in">
         <h2>About Me</h2>
-        <p>I'm Luan Merolli, a LAN/WAN Information Systems Intern at Crown Cork and Seal in Yardley, PA. I love creating solutions that make a difference.</p>
+        <p>I'm Luan Merolli, a passionate professional in [Your Field]. I love creating solutions that make a difference.</p>
     </section>
 
     <section id="projects" class="fade-in">
