--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
     <section id="gallery" class="fade-in">
         <h2>Photography Gallery</h2>
         <div class="gallery-grid">
-            <a href="images/photo1-large.jpg" class="gallery-item">
+            <a href="images/philly_skyline.jpg" class="gallery-item">
                 <img src="images/photo1-thumbnail.jpg" alt="Photo 1">
             </a>
             <a href="images/photo2-large.jpg" class="gallery-item">
