--- a/gallery.html
+++ b/gallery.html
@@ -26,13 +26,7 @@
         <h2>Photography Gallery</h2>
         <div class="gallery-grid">
             <a href="images/philly_skyline.jpg" class="gallery-item">
-                <img src="images/photo1-thumbnail.jpg" alt="Photo 1">
-            </a>
-            <a href="images/photo2-large.jpg" class="gallery-item">
-                <img src="images/photo2-thumbnail.jpg" alt="Photo 2">
-            </a>
-            <a href="images/photo3-large.jpg" class="gallery-item">
-                <img src="images/photo3-thumbnail.jpg" alt="Photo 3">
+                <img src="images/philly_skyline.jpg" alt="Philadelphia Skyline">
             </a>
             <!-- Add more images as needed -->
         </div>
