--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="hero" class="parallax">
         <div class="hero-content">
             <h1>Hi, I'm Luan Merolli</h1>
-            <p>Professional [Your Profession] based in [Your Location]</p>
+            <p>Cybersecurity student at Drexel University based in Philadelphia, PA.</p>
             <a href="https://www.linkedin.com/in/luan-merolli-75a4161b7/" target="_blank" class="btn">View LinkedIn</a>
         </div>
     </section>
@@ -38,8 +38,8 @@
         <h2>Projects</h2>
         <div class="project-grid">
             <div class="project-card">
-                <h3>Project Title</h3>
-                <p>A brief description of this project goes here.</p>
+                <h3>This website</h3>
+                <p>I created this website because I want to get more better. :D </p>
             </div>
         </div>
     </section>
