--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,7 @@
         <h2>Photography Gallery</h2>
         <div class="gallery-grid">
             <a href="images/philly_skyline.jpg" class="gallery-item">
-                <img src="images/philly_skyline.jpg" alt="Philadelphia Skyline">
+                <img src="images/philly_skyline_thumbnail.jpg" alt="Philadelphia Skyline">
             </a>
             <!-- Add more images as needed -->
         </div>
