--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html#about">About</a></li>
                 <li><a href="index.html#projects">Projects</a></li>
                 <li><a href="#gallery">Gallery</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="index.html#contact">Contact</a></li>https://github.com/Luan602/website/blob/main/gallery.html
                 <li><a href="https://www.linkedin.com/in/luan-merolli-75a4161b7/" target="_blank">LinkedIn</a></li>
             </ul>
         </nav>
@@ -26,13 +26,7 @@
         <h2>Photography Gallery</h2>
         <div class="gallery-grid">
             <div class="gallery-item">
-                <img src="images/photo1-thumbnail.jpg" alt="Photo 1" data-full="images/photo1-large.jpg">
-            </div>
-            <div class="gallery-item">
-                <img src="images/photo2-thumbnail.jpg" alt="Photo 2" data-full="images/photo2-large.jpg">
-            </div>
-            <div class="gallery-item">
-                <img src="images/photo3-thumbnail.jpg" alt="Photo 3" data-full="images/photo3-large.jpg">
+                <img src="images/philly_skyline_thumbnail.jpg" alt="Photo 1" data-full="images/philly_skyline.jpg">
             </div>
             <!-- Add more images as needed -->
         </div>
