--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html#about">About</a></li>
                 <li><a href="index.html#projects">Projects</a></li>
                 <li><a href="#gallery">Gallery</a></li>
-                <li><a href="index.html#contact">Contact</a></li>https://github.com/Luan602/website/blob/main/gallery.html
+                <li><a href="index.html#contact">Contact</a></li>
                 <li><a href="https://www.linkedin.com/in/luan-merolli-75a4161b7/" target="_blank">LinkedIn</a></li>
             </ul>
         </nav>
