--- a/gallery.html
+++ b/gallery.html
@@ -1,223 +1,45 @@
-/* General Reset and Layout */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Photography Gallery - Luan Merolli</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#projects">Projects</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="https://www.linkedin.com/in/luan-merolli-75a4161b7/" target="_blank">LinkedIn</a></li>
+            </ul>
+        </nav>
+    </header>
 
-body {
-    font-family: 'Roboto', sans-serif;
-    color: #ffffff;
-    background-color: #121212;
-    line-height: 1.6;
-    overflow-x: hidden;
-}
+    <section id="gallery" class="fade-in">
+        <h2>Photography Gallery</h2>
+        <div class="gallery-grid">
+            <div class="gallery-item">
+                <img src="images/philly_skyline_thumbnail.jpg" alt="Photo 1" data-full="images/philly_skyline.jpg">
+            </div>
+            <!-- Add more images as needed -->
+        </div>
+    </section>
 
-header {
-    background-color: #1f1f1f;
-    padding: 1rem;
-}
+    <footer>
+        <p>&copy; 2024 Luan Merolli. All rights reserved.</p>
+    </footer>
 
-nav ul {
-    display: flex;
-    justify-content: flex-end;
-    list-style: none;
-}
+    <div id="lightbox" class="lightbox">
+        <img id="lightbox-img" src="" alt="Full-size Image">
+    </div>
 
-nav ul li {
-    margin-left: 2rem;
-}
-
-nav ul li a {
-    color: #ffffff;
-    text-decoration: none;
-    font-weight: 400;
-}
-
-nav ul li a:hover {
-    text-decoration: underline;
-}
-
-/* Hero Section with Parallax Scrolling */
-#hero {
-    position: relative;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background-image: url('images/philly_skyline.jpg'); /* Add your image */
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-}
-
-.hero-content h1 {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-}
-
-.hero-content p {
-    font-size: 1.5rem;
-    margin-bottom: 2rem;
-}
-
-.btn {
-    background-color: #ff6600;
-    color: #ffffff;
-    padding: 0.75rem 1.5rem;
-    text-decoration: none;
-    font-weight: 700;
-    border-radius: 5px;
-}
-
-.btn:hover {
-    background-color: #ff8533;
-}
-
-/* About Section */
-#about {
-    padding: 4rem 2rem;
-    background-color: #1f1f1f;
-}
-
-#about h2, #projects h2, #contact h2, #gallery h2 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-}
-
-#about p {
-    font-size: 1.2rem;
-    color: #dddddd;
-    max-width: 800px;
-    text-align: left;
-}
-
-/* Projects Section */
-#projects {
-    padding: 4rem 2rem;
-}
-
-.project-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 1.5rem;
-}
-
-.project-card {
-    background-color: #222222;
-    padding: 1.5rem;
-    border-radius: 10px;
-    color: #ffffff;
-}
-
-.project-card h3 {
-    margin-bottom: 0.75rem;
-}
-
-.project-card p {
-    color: #dddddd;
-}
-
-/* Contact Section */
-#contact {
-    padding: 4rem 2rem;
-    background-color: #1f1f1f;
-    text-align: center;
-}
-
-#contact p {
-    font-size: 1.2rem;
-}
-
-#contact a {
-    color: #ff6600;
-    text-decoration: none;
-}
-
-#contact a:hover {
-    text-decoration: underline;
-}
-
-/* Footer */
-footer {
-    background-color: #1f1f1f;
-    padding: 1rem;
-    text-align: center;
-}
-
-footer p {
-    color: #888888;
-}
-
-/* Gallery Section */
-#gallery {
-    padding: 4rem 2rem;
-    background-color: #1f1f1f;
-}
-
-.gallery-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 1rem;
-    padding: 2rem;
-    background-color: #333; /* To check visibility */
-}
-
-.gallery-item img {
-    width: 100%;
-    height: auto; /* Ensure aspect ratio is maintained */
-    border-radius: 10px;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-    z-index: 10;
-    border: 2px solid red; /* Debugging border - remove once done */
-}
-
-.gallery-item img:hover {
-    transform: scale(1.05);
-}
-
-/* Lightbox Styles */
-.lightbox {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-.lightbox.active {
-    display: flex;
-}
-
-.lightbox img {
-    max-width: 90%;
-    max-height: 90%;
-    border-radius: 10px;
-}
-
-/* Fade-in and Parallax Effect */
-.fade-in {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-}
-
-.fade-in.visible {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-/* Parallax Scrolling */
-.parallax {
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-}
+    <script src="script.js"></script>
+</body>
+</html>
