added wtc picture

--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,10 @@
             <div class="gallery-item">
                 <img src="images/philly_skyline_thumbnail.jpg" alt="Photo 1" data-full="images/philly_skyline.jpg">
             </div>
+
+            <div class="gallery-item"></div>
+                <img src="images/wtcthumb.jpg" alt="Photo 1" data-full="images/wtcfull.jpg">
+            </div>
             <!-- Add more images as needed -->
         </div>
     </section>
