--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,11 @@
             <div class="gallery-item">
                 <img src="images/wtcthumb.jpg" alt="Photo 2" data-full="images/wtcfull.jpg">
             </div>
+
+            <body>
+                <h1>hello.</h1>
+            </body>
+  
             <!-- Add more images as needed -->
         </div>
     </section>
