--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <img src="images/wtcthumb.jpg" alt="WTC">
+</body>
+<!-- <body>
     <header>
         <nav>
             <ul>
@@ -33,10 +37,6 @@
                 <img src="images/wtcthumb.jpg" alt="Photo 2" data-full="images/wtcfull.jpg">
             </div>
 
-            <body>
-                <h1>hello.</h1>
-            </body>
-  
             <!-- Add more images as needed -->
         </div>
     </section>
@@ -46,9 +46,9 @@
     </footer>
 
     <div id="lightbox" class="lightbox">
-        <img id="lightbox-img" src="" alt="Full-size Image">
+        <img id="lightbox-img" src=""h1 Image">
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> -->
 </body>
 </html>
