--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#our-story">Our Story</a></li>
-            <li><a href="#menu">Menu</a></li>
+            <li><a href="menu.html">Menu</a></li>
             <li><a href="#hours-location">Hours & Location</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -32,23 +32,12 @@
         <p>For over 50 years, King of Pizza has been a North Philadelphia staple. Every slice is crafted with family tradition and the same recipes that have kept our customers coming back.</p>
     </section>
 
-    <!-- Menu Section -->
-    <section id="menu" class="section">
-        <h2>Our Menu</h2>
-        <ul>
-            <li>Cheese Pizza</li>
-            <li>Sausage Pizza (Beef Sausage)</li>
-            <li>Pepperoni Pizza (Beef Pepperoni)</li>
-        </ul>
-        <p><strong>Note:</strong> Cash-only</p>
-    </section>
-
     <!-- Hours & Location Section -->
     <section id="hours-location" class="section">
         <h2>Hours & Location</h2>
         <p><strong>Hours:</strong><br> Monday - Saturday: 10:30 AM - 6:00 PM<br>Sunday: Closed</p>
         <p><strong>Location:</strong> 3633 Germantown Ave, Philadelphia, PA 19140</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3055.9999189690675!2d-75.15298302424434!3d40.00844938038799!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b7f768603cf9%3A0x3458c4685459e5!2sKing%20of%20Pizza!5e0!3m2!1sen!2sus!4v1730425007133!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!..." width="600" height="450" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
     <!-- Contact Section -->
