--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
         <h2>Hours & Location</h2>
         <p><strong>Hours:</strong><br> Monday - Saturday: 10:30 AM - 6:00 PM<br>Sunday: Closed</p>
         <p><strong>Location:</strong> 3633 Germantown Ave, Philadelphia, PA 19140</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!..." width="600" height="450" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14378.068585223811!2d-75.1504261618411!3d40.01638997935846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b7f768603cf9%3A0x3458c4685459e5!2sKing%20of%20Pizza!5e0!3m2!1sen!2sus!4v1730425394972!5m2!1sen!2sus" 
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
     <!-- Contact Section -->
     <section id="contact" class="section">
         <h2>Contact Us</h2>
-        <p>Phone: (215) 123-4567</p>
+        <p>Phone: 215-228-0612</p>
         <p>Follow us on Yelp, Google Reviews!</p>
     </section>
 
