--- a/menu.html
+++ b/menu.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,21 +23,24 @@
     <section class="section">
         <h1>Our Full Menu</h1>
         <ul class="menu-list">
-            <li>Cheese Pizza</li>
-            <li>Sausage Pizza (Beef Sausage)</li>
-            <li>Pepperoni Pizza (Beef Pepperoni)</li>
-            <li>Vegetable Pizza</li>
-            <li>White Pizza</li>
-            <li>BBQ Chicken Pizza</li>
-            <li>Buffalo Chicken Pizza</li>
-            <li>Hawaiian Pizza</li>
-            <li>Deluxe Pizza (Pepperoni, Sausage, Mushrooms, Onions, Peppers)</li>
-            <li>Stromboli</li>
-            <li>Garlic Knots</li>
-            <li>Calzones</li>
-            <li>Cheesesteaks</li>
-            <li>Hoagies</li>
-            <li>Salads</li>
+            <h1> All Whole Pizzas are 20 inch Pizzas</h1>
+
+            <h3>Whole Pizzas</h3>
+            <li>Cheese Pizza - $18</li>
+            <li>Sausage Pizza (Beef Sausage) - $19</li>
+            <li>Pepperoni Pizza (Beef Pepperoni) - $20</li>
+
+            <h3>Slices</h3>
+            <li>Cheese - $2.50</li>
+            <li>Sausage (Beef) - $2.75</li>
+            <li>Pepperoni (Beef) - $3</li>
+            <h4>Anything extra is $0.50</h4>
+
+            <h3>Drinks</h3>
+            <li>Small $1.25</li>
+            <li>Medium $2</li>
+            <li>Large $2.50</li>
+            
         </ul>
     </section>
 
