--- a/hobbies/hobbies.html
+++ b/hobbies/hobbies.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>hobbies</title>
   <link rel="stylesheet" href="../style.css">
-  <link href="css/lightbox.min.css" rel="stylesheet">
+  <link href="../lightbox.min.css" rel="stylesheet">
+  <script src="../lightbox.min.js"></script>
 </head>
 <body>
   <header>
