--- a/hobbies/hobbies.html
+++ b/hobbies/hobbies.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>hobbies</title>
   <link rel="stylesheet" href="../style.css">
-  <link href="../lightbox.min.css" rel="stylesheet">
-  <script src="../lightbox.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -43,5 +42,6 @@
       <a class="footer-links" target="_blank" href="https://www.linkedin.com/in/yourprofile">linkedin</a>
     </nav>
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 </body>
 </html>
