--- a/hobbies/hobbies.html
+++ b/hobbies/hobbies.html
@@ -20,18 +20,39 @@
 
   <main>
     <section>
-      <h2>Music</h2>
+      <h2>music</h2>
       <p>
         Check out my Spotify Wrapped for this year.
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1FoArC06nHMfKx?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </p>
     </section>
     <section id="gallery">
-      <h2>Photo Gallery</h2>
+      <h2>photography</h2>
       <div class="gallery-grid">
-        <a href="gallery/skogar_lg.jpg" class="glightbox" data-title="Sample Image">
+        <a href="gallery/skogar_lg.jpg" class="glightbox" data-title="Skógar, Iceland">
           <img src="gallery/skogar_sm.jpg" alt="Thumbnail">
         </a>
+
+        <a href="gallery/pennmuseum_lg.jpg" class="glightbox" data-title="Penn Museum, Philadelphia">
+          <img src="gallery/pennmuseum_sm.jpg" alt="Thumbnail">
+        </a>
+
+        <a href="gallery/wtc_lg.jpg" class="glightbox" data-title="One World Trade Center, NYC">
+          <img src="gallery/wtc_sm.jpg" alt="Thumbnail">
+        </a>
+
+        <a href="gallery/nyc_lg.jpg" class="glightbox" data-title="New York City">
+          <img src="gallery/nyc_sm.jpg" alt="Thumbnail">
+        </a>
+
+        <a href="gallery/hup_lg.jpg" class="glightbox" data-title="UPenn Hospital, Philadelphia">
+          <img src="gallery/hup_sm.jpg" alt="Thumbnail">
+        </a>
+
+        <a href="gallery/fisher_lg.jpg" class="glightbox" data-title="University of Pennsylvania, Philadelphia">
+          <img src="gallery/fisher_sm.jpg" alt="Thumbnail">
+        </a>
+      
       
       </div>
     </section>    
