--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <nav>
       <a class="footer-links" href="./hobbies/hobbies.html">hobbies</a>
       <br>
-      <a class="footer-links" href="./projects/projects.html">blog</a>
+      <a class="footer-links" href="./projects/projects.html">projects</a>
       <br>
       <a class="footer-links" target="_blank" href="https://www.linkedin.com/in/yourprofile">linkedin</a>
     </nav>
