fixed linkedin links

--- a/hobbies/hobbies.html
+++ b/hobbies/hobbies.html
@@ -64,7 +64,7 @@
       <br>
       <a class="footer-links" href="./projects/projects.html">projects</a>
       <br>
-      <a class="footer-links" target="_blank" href="https://www.linkedin.com/in/yourprofile">linkedin</a>
+      <a class="footer-links" target="_blank" href="https://www.linkedin.com/in/luan-merolli-75a4161b7/">linkedin</a>
     </nav>
   </footer>
   <!-- GLightbox JS -->
