--- a/projects/projects.html
+++ b/projects/projects.html
@@ -38,7 +38,7 @@
       <br>
       <a class="footer-links" href="./hobbies/hobbies.html">hobbies</a>
       <br>
-      <a class="footer-links" target="_blank" href="https://www.linkedin.com/in/yourprofile">linkedin</a>
+      <a class="footer-links" target="_blank" href="https://www.linkedin.com/in/luan-merolli-75a4161b7/">linkedin</a>
     </nav>
   </footer>
 </body>
