fixed education tab

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
   </header>
 
   <main>
-
     <section id="education">
       <h2>Education</h2>
       <div class="education-entry">
-        <h3>BS in Computing & Security Technologies</h3>
+        <h3>BS in Computing & Security Technology</h3>
         <p class="institution">Drexel University, Philadelphia, PA</p>
         <p class="dates"><em>September 2022 – June 2027</em></p>
         <ul class="details">
@@ -29,9 +28,11 @@
       <div class="education-entry">
         <h3>Relevant Coursework</h3>
         <ul class="details">
-          <li>Introduction to Ethical Hacking</li>
-          <li>Secure Networking and Protocols</li>
-          <li>Applied Cryptography</li>
+          <li>Open Server I, II</li>
+          <li>Server I, II</li>
+          <li>Network Administration I, II</li>
+          <li>IT Security I, II</li>
+          <li>Computer Forensics I</li>
         </ul>
       </div>
     </section>
@@ -45,7 +46,6 @@
       </ul>
     </section>
         
-
     <section id="experience">
       <h2>Professional Experience</h2>
       <div class="experience-entry">
