fixed mobile experience

--- a/index.html
+++ b/index.html
@@ -45,9 +45,19 @@
         <li><strong>Operating Systems:</strong> Windows, Windows Server 2019, Ubuntu, Kali Linux, MacOS</li>
       </ul>
     </section>
+
         
     <section id="experience">
       <h2>Professional Experience</h2>
+
+      <div class="experience-entry">
+        <h3>Crown Cork and Seal</h3>
+        <p><em>LAN/WAN Information Systems Intern</em> (Sept 2024-March 2025)</p>
+        <ul class="details">
+          <li>Worked across teams to </li>
+        </ul>
+      </div>
+
       <div class="experience-entry">
         <h3>SGS & Co</h3>
         <p><em>Data Center Relocation Support</em> (May 2023)</p>
