--- a/hobbies/hobbies.html
+++ b/hobbies/hobbies.html
@@ -7,15 +7,13 @@
   <link rel="stylesheet" href="../style.css">
   <!-- GLightbox CSS -->
   <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet">
-
-
 </head>
 
 <body>
   <header>
     <h1>hobbies</h1>
     <br>
-    <p>here are some things that i'm interested in!</p>
+    <p>here are some things that i'm interested in.</p>
   </header>
 
   <main>
@@ -28,6 +26,7 @@
     </section>
     <section id="gallery">
       <h2>photography</h2>
+
       <div class="gallery-grid">
         <a href="gallery/skogar_lg.jpg" class="glightbox" data-title="Skógar, Iceland">
           <img src="gallery/skogar_sm.jpg" alt="Thumbnail">
@@ -52,7 +51,6 @@
         <a href="gallery/fisher_lg.jpg" class="glightbox" data-title="University of Pennsylvania, Philadelphia">
           <img src="gallery/fisher_sm.jpg" alt="Thumbnail">
         </a>
-      
       
       </div>
     </section>    
