--- a/hobbies/hobbies.html
+++ b/hobbies/hobbies.html
@@ -26,7 +26,9 @@
     </section>
     <section id="gallery">
       <h2>photography</h2>
-
+      <p>I usually shoot with a Canon EOS Rebel T7 with an EF-S 18-200mm f/3.5-5.6 Lens.</p>
+      <p>Also occasionally on 35mm film with my Canon AE-1.</p>
+      <br>
       <div class="gallery-grid">
         <a href="gallery/skogar_lg.jpg" class="glightbox" data-title="Skógar, Iceland">
           <img src="gallery/skogar_sm.jpg" alt="Thumbnail">
@@ -76,5 +78,6 @@
   });
   </script>
 
+  <p id="copy">&copy; 2024 Luan Merolli. Built with ♥.</p>
 </body>
 </html>
