--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <body>
   <header>
     <h1>Hi, I'm Luan Merolli.</h1>
-    <br>
+    <br> <br>
     <p>I study Cybersecurity at Drexel University.</p>
   </header>
 
   <main>
+    <h1>Resume</h1> 
+    <a href="resume.pdf">full printable resume</a>
     <section id="education">
       <h2>Education</h2>
       <div class="education-entry">
@@ -89,5 +91,7 @@
       <a class="footer-links" target="_blank" href="https://www.linkedin.com/in/luan-merolli-75a4161b7/">linkedin</a>
     </nav>
   </footer>
+
+  <p id="copy">&copy; 2024 Luan Merolli. Built with ♥.</p>
 </body>
 </html>
