--- a/hobbies/hobbies.html
+++ b/hobbies/hobbies.html
@@ -27,7 +27,7 @@
     <section id="gallery">
       <h2>photography</h2>
       <p>I usually shoot with a Canon EOS Rebel T7 with an EF-S 18-200mm f/3.5-5.6 Lens.</p>
-      <p>Also occasionally on 35mm film with my Canon AE-1.</p>
+      <p>Also, occasionally on 35mm film with my Canon AE-1.</p>
       <br>
       <div class="gallery-grid">
         <a href="gallery/skogar_lg.jpg" class="glightbox" data-title="Skógar, Iceland">
