--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <main>
     <h1>Resume</h1> 
-    <a href="resume.pdf">full printable resume</a>
+    <a href="./resume/resume.pdf">full printable resume</a>
     <section id="education">
       <h2>Education</h2>
       <div class="education-entry">
