fixed hobbies project hyperlink

--- a/hobbies/hobbies.html
+++ b/hobbies/hobbies.html
@@ -63,7 +63,7 @@
     <nav>
       <a class="footer-links" href="../index.html">home</a>
       <br>
-      <a class="footer-links" href="./projects/projects.html">projects</a>
+      <a class="footer-links" href="../projects/projects.html">projects</a>
       <br>
       <a class="footer-links" href="https://www.instagram.com/luan602/">instagram</a>
       <br>
