added new resume

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h2>Skills</h2>
       <ul class="skills-list">
         <li><strong>Programming Languages:</strong> Python, C#, JavaScript, PHP, Bash, SQL</li>
-        <li><strong>Tools & Software:</strong> Wireshark, NMAP, Cisco IOS, Visual Studio, GitHub, Photoshop, Illustrator, Microsoft Word, PowerPoint</li>
+        <li><strong>Tools & Software:</strong> Microsoft Sentinel, SentinelOne, Flare, Proofpoint TAP and TRAP, Active Directory, Wireshark, NMAP, Cisco IOS, Visual Studio, GitHub</li>
         <li><strong>Operating Systems:</strong> Windows, Windows Server 2019, Ubuntu, Kali Linux, MacOS</li>
       </ul>
     </section>
@@ -54,9 +54,17 @@
 
       <div class="experience-entry">
         <h3>Crown Cork and Seal</h3>
-        <p><em>LAN/WAN Information Systems Intern</em> (Sept 2024-March 2025)</p>
+        <p><em>Global Information Security Analyst Intern</em> (February 2025 - March 2025)</p>
         <ul class="details">
-          <li>Worked across teams to </li>
+          <li>Monitored and triaged security alerts, performing initial investigations and escalating incidents as needed.</li>
+          <li>Assisted in improving incident response workflows by providing feedback from alert triage experiences.</li>
+          <li>Supported in handling incidents with global impact, ensuring effective information sharing with international counterparts.</li>
+        </ul>
+        <p><em>LAN/WAN Information Systems Intern</em> (Sept 2024-February 2025)</p>
+        <ul class="details">
+          <li>Provided timely PC and Network support, collaborating cross-functionally to efficiently resolve tickets and maintain reliability.</li>
+          <li>Unpacked, configured, and shipped 11 Cisco 2960X(R) switches for plant network deployment.</li>
+          <li>Collaborated with the local cybersecurity team, escalating alerts and leaning on their expertise as needed.</li>
         </ul>
       </div>
 
