--- a/projects/projects.html
+++ b/projects/projects.html
@@ -8,27 +8,24 @@
 </head>
 <body>
   <header>
-    <h1>Project 1</h1>
-    <p>A minimalist project overview</p>
+    <h1>Nothing yet...</h1>
   </header>
 
-  <main>
+  <!-- <main>
     <section>
       <h2>Overview</h2>
       <p>
-        Describe your project here. This could be a coding project, a cybersecurity tool you worked on, or something creative.
       </p>
     </section>
     <section>
       <h2>Details</h2>
       <p>
-        Include deeper insights: What technologies you used, the challenges you faced, and the outcome.
       </p>
     </section>
     <section>
       <h2>Links</h2>
       <ul>
-   
+    -->
       </ul>
     </section>
   </main>
