fixed projects hobbies redirect

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -33,7 +33,7 @@
     <nav>
       <a class="footer-links" href="../index.html">home</a>
       <br>
-      <a class="footer-links" href="./hobbies/hobbies.html">hobbies</a>
+      <a class="footer-links" href="../hobbies/hobbies.html">hobbies</a>
       <br>
       <a class="footer-links" target="_blank" href="https://www.linkedin.com/in/luan-merolli-75a4161b7/">linkedin</a>
     </nav>
