--- a/projects/projects.html
+++ b/projects/projects.html
@@ -3,40 +3,222 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project 1 - Your Name</title>
+  <title>Project 1 - SEPTA Next To Arrive</title>
   <link rel="stylesheet" href="../style.css">
+  <style>
+    /* Inline styles for the SEPTA section; move to your CSS file if desired */
+    #septa-project {
+      background-color: #2c2c2c;
+      padding: 20px;
+      border-radius: 8px;
+      margin: 20px 0;
+      color: #fff;
+    }
+    #septa-project h2 {
+      margin-bottom: 1rem;
+      color: #88f1ff;
+    }
+    #stationForm {
+      margin-bottom: 1rem;
+    }
+    #stationForm label {
+      display: inline-block;
+      width: 160px;
+      margin-bottom: 0.5rem;
+    }
+    #stationForm input {
+      margin-bottom: 0.5rem;
+      padding: 6px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    #stationForm button {
+      background-color: #0066cc;
+      color: #fff;
+      padding: 8px 14px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-top: 0.5rem;
+    }
+    #stationForm button:hover {
+      background-color: #004a99;
+    }
+    #loading {
+      margin: 1rem 0;
+      font-weight: bold;
+      color: #fff;
+    }
+    #septa-table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
+      color: #fff;
+    }
+    #septa-table thead {
+      background-color: #444;
+    }
+    #septa-table th,
+    #septa-table td {
+      border: 1px solid #555;
+      padding: 8px;
+      text-align: left;
+    }
+    #septa-table th {
+      font-weight: bold;
+    }
+    main {
+      margin: 20px;
+    }
+    header {
+      background-color: #222;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    header p {
+      font-size: 1rem;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>Nothing yet...</h1>
+    <h1>Project 1: SEPTA Next To Arrive</h1>
+    <p>This project fetches real-time SEPTA transit data between two stations using the SEPTA API.</p>
+    <p>I needed an easy way to find the next train between two stations on the SEPTA Regional Rail System, so this helped.</p>
   </header>
 
-  <!-- <main>
-    <section>
-      <h2>Overview</h2>
-      <p>
-      </p>
-    </section>
-    <section>
-      <h2>Details</h2>
-      <p>
-      </p>
-    </section>
-    <section>
-      <h2>Links</h2>
-      <ul>
-    -->
-      </ul>
+  <main>
+    <!-- SEPTA Next To Arrive Project Section -->
+    <section id="septa-project">
+      <h2>Next To Arrive</h2>
+      <form id="stationForm">
+        <label for="origin">Origin Station Name:</label>
+        <input type="text" id="origin" name="origin" placeholder="e.g., Trevose" required>
+        <br>
+        <label for="destination">Destination Station Name:</label>
+        <input type="text" id="destination" name="destination" placeholder="e.g., 30th Street Station" required>
+        <br>
+        <button type="submit">Get Real-Time Data</button>
+      </form>
+
+      <div id="loading" style="display: none;">Loading data... (hang tight!)</div>
+
+      <table id="septa-table" style="display: none;">
+        <thead>
+          <tr>
+            <th>Train</th>
+            <th>Line</th>
+            <th>Departure</th>
+            <th>Arrival</th>
+            <th>Delay</th>
+            <th>Direct</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Data rows will be inserted here -->
+        </tbody>
+      </table>
     </section>
   </main>
 
-    <nav>
-      <a class="footer-links" href="../index.html">home</a>
-      <br>
-      <a class="footer-links" href="../hobbies/hobbies.html">hobbies</a>
-      <br>
-      <a class="footer-links" target="_blank" href="https://www.linkedin.com/in/luan-merolli-75a4161b7/">linkedin</a>
-    </nav>
+  <nav>
+    <a class="footer-links" href="../index.html">home</a>
+    <br>
+    <a class="footer-links" href="../hobbies/hobbies.html">hobbies</a>
+    <br>
+    <a class="footer-links" target="_blank" href="https://www.linkedin.com/in/luan-merolli-75a4161b7/">linkedin</a>
+  </nav>
+  <footer>
+    <!-- Optionally add footer content here -->
   </footer>
+
+  <script>
+    // Function to fetch SEPTA data using origin and destination station names
+    async function fetchSeptaData(origin, destination) {
+      const req3 = 15; // Default value based on sample URL
+      const API_URL = `https://www3.septa.org/api/NextToArrive/index.php?req1=${encodeURIComponent(origin)}&req2=${encodeURIComponent(destination)}&req3=${req3}`;
+      try {
+        const response = await fetch(API_URL);
+        if (!response.ok) {
+          throw new Error('Network response wasn’t ok');
+        }
+        const data = await response.json();
+        return data;
+      } catch (error) {
+        console.error('Error fetching SEPTA data:', error);
+        return []; // Return empty array on error
+      }
+    }
+
+    // Function to populate the table with API data
+    function populateTable(data) {
+      const table = document.getElementById('septa-table');
+      const tbody = table.querySelector('tbody');
+      tbody.innerHTML = ''; // Clear existing rows
+
+      if (!Array.isArray(data) || data.length === 0) {
+        tbody.innerHTML = '<tr><td colspan="6">No data available.</td></tr>';
+        return;
+      }
+
+      data.forEach(item => {
+        const row = document.createElement('tr');
+
+        const trainCell = document.createElement('td');
+        trainCell.textContent = item.orig_train;
+        row.appendChild(trainCell);
+
+        const lineCell = document.createElement('td');
+        lineCell.textContent = item.orig_line;
+        row.appendChild(lineCell);
+
+        const departureCell = document.createElement('td');
+        departureCell.textContent = item.orig_departure_time;
+        row.appendChild(departureCell);
+
+        const arrivalCell = document.createElement('td');
+        arrivalCell.textContent = item.orig_arrival_time;
+        row.appendChild(arrivalCell);
+
+        const delayCell = document.createElement('td');
+        delayCell.textContent = item.orig_delay;
+        row.appendChild(delayCell);
+
+        const directCell = document.createElement('td');
+        directCell.textContent = item.isdirect;
+        row.appendChild(directCell);
+
+        tbody.appendChild(row);
+      });
+    }
+
+    // Handle form submission
+    document.getElementById('stationForm').addEventListener('submit', async function(e) {
+      e.preventDefault();
+
+      const originInput = document.getElementById('origin').value.trim();
+      const destinationInput = document.getElementById('destination').value.trim();
+
+      // Update section header with station names
+      const projectTitle = document.querySelector('#septa-project h2');
+      projectTitle.textContent = `Next To Arrive from ${originInput} to ${destinationInput}`;
+
+      // Show loading message and hide table while fetching data
+      document.getElementById('loading').style.display = 'block';
+      document.getElementById('septa-table').style.display = 'none';
+
+      // Fetch data
+      const septaData = await fetchSeptaData(originInput, destinationInput);
+
+      // Hide loading message and display the table
+      document.getElementById('loading').style.display = 'none';
+      document.getElementById('septa-table').style.display = 'table';
+
+      // Populate table
+      populateTable(septaData);
+    });
+  </script>
 </body>
 </html>
