--- a/projects/projects.html
+++ b/projects/projects.html
@@ -74,7 +74,7 @@
       background-color: #222;
       color: #fff;
       padding: 20px;
-      text-align: center;
+      text-align: left;
     }
     header p {
       font-size: 1rem;
