--- a/projects/projects.html
+++ b/projects/projects.html
@@ -2,55 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <!-- Ensures proper mobile scaling -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  
   <link rel="stylesheet" href="../style.css">
   <title>Project 1: SEPTA Next To Arrive</title>
 
-  <!-- Inline styling to keep everything in one file -->
   <style>
-    /* Basic reset & body styling */
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #000; /* black background */
-      color: #fff;           /* white text */
-      font-family: Arial, sans-serif;
-    }
-
-    /* Header styling */
-    header {
-      background-color: #222;
-      padding: 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 1.8rem;
-      color: #fff;
-    }
-
-    /* Main content area */
-    main {
-      margin: 20px;
-    }
-
-    /* SEPTA project container */
+    /* Desktop styling for the project container: left aligned */
     #septa-project {
-      background-color: #2c2c2c;
-      padding: 20px;
-      border-radius: 8px;
-      margin-bottom: 20px;
-      color: #fff;
-    }
-    #septa-project h2 {
-      margin-bottom: 1rem;
-      color: #88f1ff; /* teal-ish heading */
+      border: 2px solid #76c7c0;
+      padding: 1.5rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      background-color: #1a1a1a;
+      max-width: 800px;
+      margin: 1rem 0 1rem 1rem; /* top, right, bottom, left */
     }
 
-    /* Form layout */
+    /* Form and input styling */
     #stationForm {
       margin-bottom: 1rem;
     }
@@ -59,25 +29,48 @@
       width: 160px;
       margin-bottom: 0.5rem;
     }
-    #stationForm input {
-      margin-bottom: 0.5rem;
-      padding: 6px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      background-color: #fff; /* white field */
-      color: #000;           /* black text inside the field */
+    #stationForm input[type="text"] {
+      border: 1px solid #76c7c0;
+      border-radius: 6px;
+      padding: 8px;
+      margin-bottom: 1rem;
+      transition: border 0.3s ease;
+      background-color: #121212;
+      color: #dcdcdc;
+    }
+    #stationForm input[type="text"]:focus {
+      border-color: #dcdcdc;
+      outline: none;
     }
     #stationForm button {
-      background-color: #0066cc;
-      color: #fff;
-      padding: 8px 14px;
+      background-color: #76c7c0;
+      color: #121212;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
+      padding: 8px 16px;
       cursor: pointer;
-      margin-top: 0.5rem;
+      transition: background-color 0.3s ease;
     }
     #stationForm button:hover {
-      background-color: #004a99;
+      background-color: #5bb1a8;
+    }
+
+    /* Table styling */
+    #septa-table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 1rem;
+    }
+    #septa-table th, 
+    #septa-table td {
+      padding: 10px;
+      border: 1px solid #76c7c0;
+      text-align: left;
+      vertical-align: middle;
+    }
+    #septa-table th {
+      background-color: #76c7c0;
+      color: #121212;
     }
 
     /* Loading message */
@@ -87,44 +80,22 @@
       color: #fff;
     }
 
-    /* Table styling */
-    #septa-table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 1rem;
-      color: #fff;
-    }
-    #septa-table thead {
-      background-color: #444;
-    }
-    #septa-table th,
-    #septa-table td {
-      border: 1px solid #555;
-      padding: 8px;
-      text-align: left;
-    }
-    #septa-table th {
-      font-weight: bold;
-    }
-
-    /* Nav styling */
-    nav {
-      margin: 20px;
-    }
-    nav a.footer-links {
-      color: #88f1ff;
-      text-decoration: none;
-      display: inline-block;
-      margin-bottom: 10px;
-    }
-    nav a.footer-links:hover {
-      text-decoration: underline;
-    }
-
-    /* Footer styling */
-    footer {
-      margin: 20px;
-      text-align: center;
+    /* Mobile styling: center the container on mobile */
+    @media (max-width: 768px) {
+      #septa-project {
+        margin: 1rem auto; /* center horizontally */
+        width: 90%;
+      }
+      
+      /* Make labels block-level on mobile for a cleaner look */
+      #stationForm label {
+        width: auto;
+        display: block;
+        margin-bottom: 0.2rem;
+      }
+      #septa-table, #septa-table th, #septa-table td {
+        font-size: 0.9rem;
+      }
     }
   </style>
 </head>
@@ -134,25 +105,24 @@
   </header>
 
   <main>
-    <!-- SEPTA Next To Arrive Project Section -->
     <section id="septa-project">
       <h2>Next To Arrive</h2>
       <form id="stationForm">
-        <label for="origin">Origin Station Name:</label>
+        <label for="origin">Starting Station:</label>
         <input 
           type="text" 
           id="origin" 
           name="origin" 
-          placeholder="e.g., Trevose" 
+          placeholder="e.g., 30th Street Station" 
           required
         >
         <br>
-        <label for="destination">Destination Station Name:</label>
+        <label for="destination">Ending Station:</label>
         <input 
           type="text" 
           id="destination" 
           name="destination" 
-          placeholder="e.g., 30th Street Station" 
+          placeholder="e.g., Trevose" 
           required
         >
         <br>
@@ -195,6 +165,8 @@
     // Fetch data from the SEPTA Next To Arrive API
     async function fetchSeptaData(origin, destination) {
       const req3 = 15; // default value
+      // According to the docs:
+      // req1 = Starting Regional Rail Station, req2 = Ending Regional Rail Station
       const API_URL = `https://www3.septa.org/api/NextToArrive/index.php?req1=${encodeURIComponent(origin)}&req2=${encodeURIComponent(destination)}&req3=${req3}`;
       try {
         const response = await fetch(API_URL);
